Sculpt: Elastic Deform brush not respecting masks #125838

Closed
opened 2024-08-03 23:09:13 +02:00 by TheRedWaxPolice · 1 comment

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.3.0-alpha+main.11e7b7d0bd13-windows.amd64-release
Worked: 4.2

Short description of error
The Elastic Defeform brush is ignoring the masks on the mesh...

Exact steps for others to reproduce the error
File/New/Sculpting
Mask the entire mesh (Mask menu/Fill Mask)
Choose the Elastic Deform brush and move parts of the mesh
As you can see, the brush still works even though the mesh is masked...

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.3.0-alpha+main.11e7b7d0bd13-windows.amd64-release Worked: 4.2 **Short description of error** The Elastic Defeform brush is ignoring the masks on the mesh... **Exact steps for others to reproduce the error** File/New/Sculpting Mask the entire mesh (Mask menu/Fill Mask) Choose the Elastic Deform brush and move parts of the mesh As you can see, the brush still works even though the mesh is masked... <video src="/attachments/bef0c64a-2dab-4196-b5ca-160a638171ae" title="blender_JjGJNbqYzA.mp4" controls></video>
TheRedWaxPolice added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-08-03 23:09:13 +02:00
Member

Can confirm, likely broke in 1efe3983ec with refactor

Can confirm, likely broke in 1efe3983ec1f66d80f3fc75ca892070e7245954d with refactor
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-04 18:28:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125838
No description provided.